fixed frictions and made a few UX changes.
